--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         We never use or share your location. We aim to be the most secure.
     </p>
 
-    <button class="gps-btn" id="gpsBtn">Get My Current Location</button>
+    <button class="gps-btn" id="gpsBtn">Generate Keys</button>
 </div>
 
 <script src="main.js"></script>
